--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
 name: With dependencies at minimal versions
 jobs:
@@ -15,7 +15,7 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
       - name: cargo update -Zminimal-versions
