--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
 name: Minimum Supported Rust Version
 jobs:
@@ -10,12 +10,12 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: 1.49.0 # tracing-core
+          toolchain: 1.56.1 # 2021 edition requires 1.56
           override: true
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
-      - name: cargo +1.49.0 check
+      - name: cargo +1.56.1 check
         uses: actions-rs/cargo@v1
         with:
           command: check
