--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
 name: lint
 jobs:
@@ -17,7 +17,7 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.toolchain }}
           components: rustfmt, clippy
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
       - name: cargo fmt --check
@@ -25,14 +25,24 @@ jobs:
         with:
           command: fmt
           args: --check
-      - name: cargo doc
-        uses: actions-rs/cargo@v1
-        if: always()
-        with:
-          command: doc
-          args: --no-deps --all-features
       - name: cargo clippy
         uses: actions-rs/clippy-check@v1
         if: always()
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+  doc:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+      - uses: actions/checkout@v3
+      - name: cargo doc
+        uses: actions-rs/cargo@v1
+        with:
+          toolchain: nightly
+          command: doc
+          args: --no-deps --all-features
+        env:
+          RUSTDOCFLAGS: --cfg docsrs
